fix: social link's gap, shaked header when scrolled

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -190,7 +190,6 @@ h6 {
   color: color-mix(in srgb, var(--contrast-color), transparent 40%);
   line-height: 0;
   transition: 0.3s;
-  margin-left: 20px;
 }
 
 .header .topbar .social-links a:hover {
